fix: scroll item into view if its not visible

--- a/src/global.css
+++ b/src/global.css
@@ -554,6 +554,10 @@ video {
   display: none;
 }
 
+.block {
+  display: block;
+}
+
 .inline-block {
   display: inline-block;
 }
